--- a/html/packages/site/templates/comment-item.html
+++ b/html/packages/site/templates/comment-item.html
@@ -10,8 +10,8 @@
 	    <div class="bubble">  
 		<div class="pointer"></div>
 	        <div class="content">
-	        	<span>{{poster}} {{comment_date}}</span>
-	        	<p>{{comment}}</p>
+	        	<span class="comment-date">{{poster}} {{comment_date}}</span>
+	        	<p class="comment-text">{{comment}}</p>
 	        </div>
 	    </div>
 	</div>
