--- a/html/pages/game/game.css
+++ b/html/pages/game/game.css
@@ -55,12 +55,11 @@ div.stretch{
     margin-right:0;
 }
 
-.game-image{
-    display:block; float: left;
-}
-
 ul.teams-list{
-    display:inline-block; padding:10px; width: 65%;float: left;
+    display:inline-block;
+    padding:10px;
+    width: 65%;
+    float: left;
 }
 
 ul.teams-list li.team-item{
@@ -68,6 +67,7 @@ ul.teams-list li.team-item{
     vertical-align: middle;
     height: 80px;
     padding: 10px;
+    margin-top:10px;
     display:block;
     border-bottom:1px solid #CCCCCC;
     font-family:'Avenir','HelveticaNeue','Helvetica';
@@ -80,8 +80,8 @@ ul.teams-list li.team-item:last-child{
 li.team-item div.score-box{
     display: inline-block;
     float: left;
-    height:60px;
-    width: 60px;
+    height:50px;
+    width: 50px;
     background-color:#e49f6f;
     text-align: center;
     padding: 5px;
@@ -92,7 +92,7 @@ div.score-box span{
     font-size: 2.2em;
     font-weight: bolder;
     display: block;
-    margin-top:20px;
+    margin-top:15px;
 }
 
 li.team-item div.score-box.win{
@@ -126,4 +126,5 @@ li.team-item div.org-info{
 .header-image-container{
     display: inline-block;
     float: left !important;
+    margin: 20px 0 0 10px;
 }
