--- a/html/packages/sportorg/templates/teamroster-item.html
+++ b/html/packages/sportorg/templates/teamroster-item.html
@@ -1,13 +1,11 @@
 
 {{#payload}}
-    <h3>{{team_name}}</h3>
-    {{#rosters}}
+    <h3>{{name}}</h3>
         <img src="{{user_picture}}" alt="{{name}}"/><br/>
         {{name}} '{{grad_year}}<br/>
         {{sport_name}}<br/>
         {{position}}<br/>
         {{team_name}}<br/>
-    {{/rosters}}
     <br/><br/>
 {{/payload}}
 
