--- a/html/pages/game/templates/layout.html
+++ b/html/pages/game/templates/layout.html
@@ -14,6 +14,11 @@
 		<div id="add-media" class="clearfix">add media</div>
 	</div>
 	
+	<div class="green-left-heading">ROSTER</div>
+	<div id="roster-wrap" class="clearfix clear">
+				
+	</div>
+	
 	<div class="row-fluid">
 		<div class="span4" id="main-sidebar">
 			<div id="org-wrap" class="clearfix hide"></div>
