--- a/html/pages/game/templates/layout.html
+++ b/html/pages/game/templates/layout.html
@@ -14,10 +14,12 @@
 		<div id="add-media" class="clearfix">add media</div>
 	</div>
 	
-	<div class="green-left-heading">ROSTER</div>
-	<div id="roster-wrap" class="clearfix clear">
-				
-	</div>
+	<div class="green-left-heading team-one-h hide"></div>
+	<div id="roster-wrap" class="clearfix clear"></div>
+	
+	<div class="green-left-heading team-second-h hide"></div>
+	<div id="roster-second-wrap" class="clearfix clear"></div>	
+	
 	
 	<div class="row-fluid">
 		<div class="span4" id="main-sidebar">
