--- a/html/pages/imageup/templates/basic.html
+++ b/html/pages/imageup/templates/basic.html
@@ -14,9 +14,12 @@
 		<h3 id="label">Image Uploader</h3>
 	</div>
 
-	<div id="main-content-img"></div>
+	<div class="side-panel">
+		<div id="main-content-img"></div>
+		<div id="image-tagging"></div>
+	</div>
 
-	<div class="modal-body">
+	<div class="main-body">
 		<div id="errormsg"></div>
 		<div id="preview"></div>
 	</div>
