--- a/html/pages/profilesetting/templates/positions.html
+++ b/html/pages/profilesetting/templates/positions.html
@@ -1,3 +1,3 @@
 {{#Data}}
-<span id="pos-{{id}}" class="span3 pointer spn-position-title_h" positionId='{{id}}'>{{name}} </span>
+<span id="pos-{{id}}" class="span3 spn-position-title_h" positionId='{{id}}'>{{name}} </span>
 {{/Data}}
