--- a/html/packages/user/templates/fitnessbasic-item.html
+++ b/html/packages/user/templates/fitnessbasic-item.html
@@ -1,5 +1,9 @@
-
 {{#payload}}
-    {{fitness_test}}:  {{view.calculate}}
+	{{#data}}
+		<div class="fitness-overview-data-piece" style="width:30%; display:inline-block; float:left; height:50px;margin:20px;">
+			<img src="{{icon}}" style="width:50px; height: 50px;"/>
+			<span style="font-family: 'Avenir';font-weight: bolder; font-size: 2em;">{{val}}</span>
+		</div>
+	{{/data}}
 {{/payload}}
 
