--- a/html/pages/imageup/templates/uploader.html
+++ b/html/pages/imageup/templates/uploader.html
@@ -1,8 +1,7 @@
 
-<div id="imageholder" class="imageholder"><br/><br/>Drag & Drop</div><br/>
-	<div align="center"><input type="file" id="image_file" class="files" name="image_file[]" multiple=""></div><br/>
+	<div id="imageholder" class="imageholder">Drag & Drop</div>
+	<div align="center"><input type="file" id="image_file" class="files" name="image_file[]" multiple=""></div>
 	<div class="modal-footer">
-		<button class="btn fileuploader btn-primary" id="imageup" type="button">Upload</button>
-		<button class="btn" data-dismiss="modal"  aria-hidden="true">Close</button>
+		<button class="btn fileuploader btn-primary" id="imageup" type="button">Upload and Finish</button>
 	</div>
 	
