--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -17,31 +17,19 @@
 		    </div>
 		    
 		    <div class="span6">
-			    	<div class="school-name">Fairfax High</div>
-			    	<div class="city">Los Angeles CA</div>
+			    	<div class="school-name">ORG NAME</div>
+			    	<div class="city">LOCATION</div>
 			    	<div class="teams">
 			    		 <div id="sports-info"></div>
 			    	</div>
 			    	<div class="height">{{#height_ft}}{{height_ft}}{{/height_ft}}</div>
 			    	<div class="weight">{{#weight_lb}}{{weight_lb}} lbs{{/weight_lb}}</div>
-			    	  <!--div class="running">Running Back <span class="userheight">{{user_height}}</span> 
-			    	  	<span class="userweight">{{user_weight}}</span> </div>
-			            <div class="votes">Votes: {{num_votes}}</div>
-			            <div class="followers">Followers: {{num_followers}}</div-->
 	       </div>
 	    </div>
 	    
-	    <div class="span5">
-	    	<div>Stats</div>
+	    <div class="stats-panel span5" style="background-color:#e0e0e0; padding:0px 10px 10px 10px;">
+	    	<div style="background-color:#b9b9ba; font-family: 'Avenir','HelveticaNeue'; font-weight: bold; font-size: 1.5em;padding:0;">Stats</div>
 	    	<div id="fitnessbasic-wrap"></div>
-	    	<!--ul class="stats-ul">
-	    		<li>GAMES 12</li>
-	    		<li>FOULS 2 </li>
-	    		<li>SHOUTS 14</li>
-	    		<li>GOALS 5</li>
-	    		<li>ASSISTS 7</li>
-	    		<li>SHUTOUTS 2</li>
-	    	</ul-->
 	    </div>
 	</div>    
     
