--- a/html/pages/profilesetting/templates/level.html
+++ b/html/pages/profilesetting/templates/level.html
@@ -22,7 +22,7 @@
 			<span class="span3">
 				<input type="checkbox" class="chkSeasons chkSeasons-{{season_id}}-{{year}}" seasonId = '{{season_id}}' year='{{year}}' orgsid="{{orgsId}}" sportsid="{{sportsId}}"/>
 				<label>&nbsp;{{season_name}} </label> 
-				<a href="javascript:void(0)" class="btnOpenPositions displayNone" >Positions</a>
+				<a href="javascript:void(0)" class="btnOpenPositions displayNone" disabled="disabled" >Positions</a>
 				</span>
 			{{/seasons}}
 		</div>
