More work on styling and trying to figure out the team list in profile header

--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -27,8 +27,8 @@
 	       </div>
 	    </div>
 	    
-	    <div class="stats-panel span5" style="background-color:#e0e0e0; padding:0px 10px 10px 10px;">
-	    	<div style="background-color:#b9b9ba; font-family: 'Avenir','HelveticaNeue'; font-weight: bold; font-size: 1.5em;padding:0;">Stats</div>
+	    <div class="stats-panel span5" style="width:35%;">
+	    	<div class="stats-header">Stats</div>
 	    	<div id="fitnessbasic-wrap"></div>
 	    </div>
 	</div>    
