--- a/html/css/app.css
+++ b/html/css/app.css
@@ -238,6 +238,7 @@ div.image-item-container img{
     position: absolute;
     min-width: 220px;
     min-height: 220px;
+    max-width: 500%;
 }
 
 .action-section{
