quick stash to pull sanjay branch.

--- a/html/packages/sportorg/templates/org-item.html
+++ b/html/packages/sportorg/templates/org-item.html
@@ -11,7 +11,7 @@
 			
 				{{#schedules}}
 				<li>
-				<a href="javascript: void(0);" class="background-blue team-info-h">
+				<a href="javascript: void(0);" class="win team-info-h">
 					
 						<div class="org-popup hide">
 							<ul>
