--- a/html/css/app.css
+++ b/html/css/app.css
@@ -713,7 +713,7 @@ margin-right: 100px;
     background-color: #e0e0e0;
     border-radius: 40px;
     width: 85%;
-    padding: 15px 25px;
+    padding: 20px 25px;
     margin: 0px 5% 48px 5%;
 }
 
@@ -726,6 +726,7 @@ margin-right: 100px;
 .game-box-outer ul {
     background: #bbbbbc;
     border-radius:5px;
+    height: 8px;
 }
 
 .game-box-outer li {
@@ -733,17 +734,28 @@ margin-right: 100px;
     display: inline-block;
     margin-left:20px;
     border-radius: 0;
-    top:-3px;
+    top:-4px;
 }
 
 
 .game-box-outer li a {
     padding:1px 10px 0px 10px;
     border-radius: 25px;
-
-    border: 3px solid #bbbbbc;
+    border: 4px solid #bbbbbc;
     color: #FFF;
     position: relative;
+}
+
+.game-box-outer li a.win{
+    background-color: #dc6526;
+}
+
+.game-box-outer li a.loss{
+    background-color: #555ad1;
+}
+
+.game-box-outer li a.no-score{
+    background-color: #bbbbbc;
 }
 
 .background-blue {
