--- a/html/pages/profile/templates/sport-team.html
+++ b/html/pages/profile/templates/sport-team.html
@@ -1,4 +1,4 @@
 {{#records}}
-    {{#payload.team_name}}{{payload.team_name}}{{/payload.team_name}}<br/>
+    <a href="/#team/{{payload.id}}">{{#payload.team_name}}{{payload.team_name}}{{/payload.team_name}}</a><br />
 {{/records}}
 
