--- a/html/packages/media/templates/image-item.html
+++ b/html/packages/media/templates/image-item.html
@@ -1,4 +1,4 @@
-	<a href="{{_link}}" class="image-outer-h">
+	<a href="{{_link}}" data-index="{{index}}" class="image-outer-h">
 		<div class="image-item-container">
 		<img src="{{_thumbnail}}" alt=""/>
 
