--- a/html/packages/site/templates/comment-item.html
+++ b/html/packages/site/templates/comment-item.html
@@ -1,7 +1,6 @@
 
 {{#payload}}
-
-<div class="row-fluid">
+<div class="row-fluid" data-id="bbbbbbbb">
     <div class="user-photo">
     	<img src="{{base_url}}{{poster_picture}}" alt="{{poster}}" />
     </div>
