--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -1,30 +1,30 @@
 <div class="row-fluid">
-	<span class="spn-black-heading  well-small">High School</span>
+	<span class="green-left-heading">High School</span>
 </div>
 
-<div id="btn-Add-School" class="clearfix div-add-dotted well-small">
-	+ Add a School
+<div id="btn-Add-School" class="clearfix div-add-dotted">
+	+ ADD SCHOOL
 </div>
-<div id="section-Add-Sports-school" class="displayNone"> 
-<div>
-	<span class="span2">What State?</span>
-	<input type="text" id="txt-school-state" placeholder="Just Start Typing" tabindex="0"/>
-	<p class="field-error"></p>
-	<p class="field-message"></p>
-</div>
-
-<div>
-	<span class="span2">What School?</span>
-	<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled" tabindex="0"/>
-	<p class="field-error"></p>
-	<p class="field-message"></p>
-</div>
-<div class="div-sports-wrapper displayNone">
-	<div id="def-school-sports-section" class="school-sports-section">
-
+<div id="section-Add-Sports-school" class="displayNone add-org-fields">
+	<div>
+		<span class="span2">What State?</span>
+		<input type="text" id="txt-school-state" placeholder="Just Start Typing" tabindex="0"/>
+		<p class="field-error"></p>
+		<p class="field-message"></p>
 	</div>
-	<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
-</div>
+
+	<div>
+		<span class="span2">What School?</span>
+		<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled" tabindex="0"/>
+		<p class="field-error"></p>
+		<p class="field-message"></p>
+	</div>
+	<div class="div-sports-wrapper displayNone">
+		<div id="def-school-sports-section" class="school-sports-section">
+
+		</div>
+		<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
+	</div>
 <!-- <span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary btn-finish-addsports" >Finish</a> </span> -->
 </div>
 <!--SCHOOL LISTING SECTION HERE-->
