--- a/html/pages/profilesetting/templates/individualsports.html
+++ b/html/pages/profilesetting/templates/individualsports.html
@@ -1,19 +1,14 @@
-<div class="row-fluid sub-section-prof-setting well well-large">
-	<div class="row-fluid">
-		<span class="spn-black-heading  well-small">Individual Sports</span>
-	</div>
-	<div>
-		<!-- <h6>Select All Sports You Compete In</h6>
-		<span class="row-fluid">
-			<input type="checkbox" class="select-all" />
-			<label>Select All</label> </span> -->
-			<div class="well sports-list-individial-sports">
+<div class="sub-section-prof-setting">
 
-</div>
-<div class ="well sports-list-user-individual-sports"
-	</div>
 	<div class="row-fluid">
-		<!--<a href="javascript:void(0)" class="floatRight well-small btn-primary btn-Save-Individual-Sports" >Save</a> -->
+		<span class="green-left-heading">Individual Sports</span>
 	</div>
-	
+	<div class="section-individual-sports">
+		<div class="org-sport-list">
+			<div class="org-sport-list-header">
+				<div class="org-name">Select The Sports you Participate in</div>
+			</div>
+			<div class="sports-list-individial-sports"></div>
+		</div>
+	</div>
 </div>
