--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -1,11 +1,11 @@
 <div class="row-fluid">
-	<span class="spn-black-heading  well-small">Clubs</span>
+	<span class="green-left-heading">Clubs</span>
 </div>
 
-<div id="btn-Add-club" class="clearfix div-add-dotted well-small">
+<div id="btn-Add-club" class="div-add-dotted">
 	+ Add a Club
 </div>
-<div id="section-Add-Sports-club" class="displayNone">
+<div id="section-Add-Sports-club" class="displayNone add-org-fields">
 <div>
 	<span class="span2">What State?</span>
 	<input type="text" id="txt-club-state" placeholder="Just Start Typing" tabindex="0"/>
@@ -23,7 +23,7 @@
 	<div id="def-club-sports-section" class="school-sports-section">
 
 	</div>
-	<span class="floatLeft"><a href="javascript:void(0)" class=" well-small btn-add-sports" >Add Sports</a> </span>
+	<span class="floatLeft"><a href="javascript:void(0)" class="btn-add-sports" >Add Sports</a> </span>
 </div>
 <!--<span class="floatRight"><a href="javascript:void(0)" class=" well-small btn-primary" >Save</a> </span> -->
 </div>
@@ -32,78 +32,3 @@
 <div class="row-fluid section-team-list-detail-club">
 
 </div>
-
-<!--lIST-->
-
-<!-- <div class="clearfix">
-	<h4> Football</h4>
-</div>
-<div class="sub-section-prof-setting well well-large">
-	<div class="well-small">
-		<strong>Varsity</strong> X
-	</div>
-	<div class="span12">
-		<span class="span3"><strong>2013</strong></span>
-		<span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span>
-	</div>
-	<div class="span12">
-		<span class="span3"><strong>2012</strong></span>
-		<span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span>
-	</div>
-	<div class="span12">
-		<span class="span3"><strong>2011</strong></span>
-		<span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span>
-	</div>
-	<div class="well-small">
-		<strong>Junior Varsity</strong> X
-	</div>
-	<div class="span12">
-		<span class="span3"><strong>2013</strong></span>
-		<span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span>
-	</div>
-	<div class="span12">
-		<span class="span3"><strong>2012</strong></span>
-		<span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span>
-	</div>
-	<div class="span12">
-		<span class="span3"><strong>2011</strong></span>
-		<span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span><span class="span3">
-			<input type="checkbox" />
-			<label>Spring </label> </span>
-	</div>
-	<div class="row-fluid clearfix">
-		<span class="floatLeft"><a href="javascript:void(0)">Add Level</a> </span>
-		<span class="floatRight"><a href="javascript:void(0)" class="well-small btn-primary" >Finish</a> </span>
-	</div>
-</div> -->
-
