--- a/html/pages/profilesetting/templates/sportscheckbox.html
+++ b/html/pages/profilesetting/templates/sportscheckbox.html
@@ -1,5 +1,13 @@
 {{#sports}}
-<span class="span3">
-			<input type="checkbox" id="chk-ind-{{sport_id}}" class="chk-single" sportid="{{sport_id}}" />
-			<label>{{sport_name}}</label> </span>
+	<div>
+		<div class="org-sport-list-header">
+			<div class="sport-name">
+				<input type="checkbox" id="chk-ind-{{sport_id}}" class="chk-single" sportid="{{sport_id}}" />
+
+				<img src="{{icon}}" />
+
+				{{sports_name}}
+			</div>
+		</div>
+	</div>
 {{/sports}}
