final email registration with popup

--- a/html/pages/signup/templates/imageupload.html
+++ b/html/pages/signup/templates/imageupload.html
@@ -6,7 +6,7 @@
       <div id="imgcontainer" class="imgcontainer">
        
         <div class="textcenter pane" id="imgpreview" >
-          <img id="image-select" />
+          <img id="image-select" style="max-height: 245px; max-width: 320px;" />
             <div class="coords" style="display:none;">
                 <div>crop x <input name="crop-x" type="hidden" /></div>
                 <div>crop y <input name="crop-y" type="hidden" /></div>
