--- a/html/pages/signup/templates/layout.html
+++ b/html/pages/signup/templates/layout.html
@@ -1,5 +1,5 @@
 
-<div id="main-header">
+<!--<div id="main-header">
 
 </div>
 
@@ -10,5 +10,20 @@
 </div>
 
 <div id="main-footer">
+
+</div>-->
+<div id="imgUploadModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+		<h3 id="label">Registration</h3>
+	</div>
+
+	<div id="main-content-reg"></div>
+
+	<div class="modal-body">
+		<div id="errormsg"></div>
+		<div id="preview"></div>
+	</div>
 
 </div>
