--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -8,10 +8,6 @@
 	max-height: 540px !important;
 }
 
-.photo-frame-model .comment-input-outer {
-	float: right;
-	width: 30%;
-}
 
 .photo-frame-model .comment .user-photo img {
 	margin-top: 0px !important;
@@ -34,9 +30,16 @@
 	width: 70%;
 }
 
-.comment-area, .photo-frame-model #comment_div {
-	width: 30%;
+.photo-player-right-area {
+		width: 30%;
 	float: right;
+	height: 520px;
+overflow-y: auto;
+}
+
+.comment-area, .photo-frame-model #comment_div {
+	/*width: 90%;
+	float: right;*/
 }
 
 .photo-player-coment {
