team page fixes

--- a/html/packages/sportorg/templates/team-list.html
+++ b/html/packages/sportorg/templates/team-list.html
@@ -1,3 +1,4 @@
+{{#data}}
 <div class="select-team">
 	<div class="game-box-outer">
 		<ul class="team-list-h">
@@ -6,3 +7,9 @@
 	</div>
 </div>
 </div>
+{{/data}}
+{{^data}}
+<div class="info">	
+	No games on the docket.  <a href="#addgame" title="add game">Click here to Add Game.</a>
+</div>
+{{/data}}
