--- a/html/pages/signup/templates/imageupload.html
+++ b/html/pages/signup/templates/imageupload.html
@@ -1,3 +1,6 @@
+ <style type="text/css">
+
+ </style>
  <div id="regcontainer">
     <div id="mainregimg">
       <div id="header">
@@ -23,9 +26,10 @@
           <div class="selectlabel">Select File</div>
           <div class="showselected"></div>
         </div>  
-
+         
         <div id="imgupload"  class="imgupload">
-          <input type="submit" name="imgup" id="crpimgup" value="Crop and save" class="imgup" />    
+          <input type="submit" name="imgup" id="crpimgup" value="Crop and save" class="imgup" /> 
+           <input type="submit" name="skip" id="skip" value="Skip" class="imgup" />   
         </div>
         
       </div>
