--- a/html/pages/userresume/templates/academic.html
+++ b/html/pages/userresume/templates/academic.html
@@ -1,15 +1,10 @@
-<div class="row-fluid sub-section-prof-setting well well-large">
-<div class="row-fluid">
-	<span class="spn-black-heading  well-small">Academic</span>
-</div>
-<div id="container-academic-gpa">
-	
-</div>
-
-<div id="container-StandardizedTest">
-	
-</div>
-<div id="container-ApTest">
-	
-</div>
+<div class="sub-section-prof-setting">
+	<div class="row-fluid">
+		<span class="green-left-heading">Academic</span>
+	</div>
+	<div class="inset-data-entry">
+		<div id="container-academic-gpa"></div>
+		<div id="container-StandardizedTest"></div>
+		<div id="container-ApTest"></div>
+	</div>
 </div>
