--- a/html/pages/userresume/templates/layout.html
+++ b/html/pages/userresume/templates/layout.html
@@ -1,20 +1,12 @@
-<div class="span12 well-large" style="margin : auto">
-	<div id="main-header-prof-setting">
-
-	</div>
-
-
-
-
+<div class="main-container" style="margin : auto">
 	<!-- Basic Info Section Starts-->
-	<div class="row-fluid well" id="section-basics-prof-setting">
-	</div>
+	<div id="section-basics-prof-setting" style=""></div>
 	<!-- Basic Info Section Ends-->
 
-<!-- Sent Resume Section Starts -->
+<!-- Sent Resume Section Starts
 	<div id="section-sent-resume">
-		
-	</div>
+
+	</div>-->
 <!-- Sent Resume Section Ends -->
 
 <!-- Rd Tree Section Starts -->
