--- a/html/pages/userresume/templates/references.html
+++ b/html/pages/userresume/templates/references.html
@@ -1,6 +1,6 @@
-<div class="row-fluid sub-section-prof-setting well well-large">
+<div class="row-fluid sub-section-prof-setting">
 	<div class="row-fluid">
-		<span class="spn-black-heading  well-small">References</span>
+		<span class="green-left-heading">References</span>
 	</div>
 
 	<div class="section-new-reference">
