--- a/html/pages/userresume/templates/test.html
+++ b/html/pages/userresume/templates/test.html
@@ -1,4 +1,4 @@
-<h3>{{Test_Type}} Tests</h3>
+<span class="standard-subsection-header">{{Test_Type}} Tests</span>
 <div class="clearfix ">
 <div class="div-add-dotted well-small btn-Add-test" testids="{{TestIds}}">
 	+ Add a Test
