--- a/html/pages/profilesetting/templates/layout.html
+++ b/html/pages/profilesetting/templates/layout.html
@@ -1,4 +1,4 @@
-<div class="span12" style="margin : auto; background-color: white; width:100%; padding-bottom: 60px;">
+<div class="span12 main-container">
 	<div id="main-header-prof-setting" class="profile-header"></div>
 
 	<!-- Basic Info Section Starts-->
